--- a/scss/base.scss
+++ b/scss/base.scss
@@ -1,3 +1,6 @@
+@import "core/basics";
 @import "core/normalize";
 @import "core/skeleton";
 @import "core/variables";
+
+@import "content/registry"
