--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -4,6 +4,9 @@ $a_green : #b1ca07;
 $a_fiuscia : #b90066;
 $a_teal : #00a49a;
 $a_grey : #8c9086;
+$action-color: $a_green;
+$dark : #1e1e1e;
+$w: #f0f0f0;
 
 @mixin img_sprite(){
   position: relative;
