basic sections' styling

--- a/scss/base.scss
+++ b/scss/base.scss
@@ -8,4 +8,9 @@
 @import "components/main_menu";
 
 @import "content/globals";
-@import "content/s_hero"
+@import "content/s_hero";
+@import "content/s_intro";
+@import "content/s_comunidades";
+@import "content/s_buzon";
+@import "content/s_reclutamiento";
+@import "content/foot";
