--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -4,6 +4,7 @@ $a_green : #b1ca07;
 $a_fiuscia : #b90066;
 $a_teal : #00a49a;
 $a_grey : #8c9086;
+$a_grey_shade: #babdb5;
 $action-color: $a_green;
 $dark : #3e3e3e;
 $w: #f3f3f2;
