--- a/css/base.css
+++ b/css/base.css
@@ -965,6 +965,7 @@ body {
 
 aside#slidding_menu, div#panel {
   width: 100%;
+  width: 100vw;
   min-height: 100%;
   min-height: 100vh;
   top: 0;
@@ -982,7 +983,9 @@ aside#slidding_menu, div#panel {
 aside#slidding_menu {
   background-color: #b1ca07;
   position: fixed;
+  height: 100%;
   height: 100vh;
+  width: 100%;
   width: 100vw;
   z-index: 0; }
   aside#slidding_menu nav {
@@ -1160,13 +1163,38 @@ button.hamburger {
     position: absolute;
     left: -300%; }
 
-header#hero .astudillo {
-  width: 100%;
-  right: auto;
-  left: auto; }
+header#hero {
+  height: 100%;
+  height: 100vh;
+  background-color: #babdb5;
+  background: url(../images/Ricardo_Astudillo_Suarez-002.jpg) no-repeat center center;
+  background-size: cover; }
+  header#hero .astudillo {
+    width: 100%;
+    right: auto;
+    left: auto; }
+  header#hero .corregidora {
+    width: 50%;
+    left: 0; }
 
-header#hero .corregidora {
-  width: 50%;
-  left: 0; }
+section#intro {
+  padding: 1em 0; }
+
+section#comunidades {
+  background-color: #babdb5;
+  height: 50%;
+  height: 50vh; }
+
+section#buzon {
+  background-color: #8c9086;
+  color: #f3f3f2; }
+
+section#reclutamiento input {
+  color: #b1ca07; }
+
+footer {
+  background-color: #3e3e3e; }
+  footer .astudillo {
+    margin: 0 auto; }
 
 /*# sourceMappingURL=base.css.map */
