--- a/scss/components/_main_menu.scss
+++ b/scss/components/_main_menu.scss
@@ -1,5 +1,6 @@
 aside#slidding_menu, div#panel{
   width: 100%;
+  width: 100vw;
   min-height: 100%;
   min-height: 100vh;
   top: 0;
@@ -23,7 +24,9 @@ aside#slidding_menu, div#panel{
 aside#slidding_menu{
     background-color: $a_green;
     position: fixed;
+    height: 100%;
     height: 100vh;
+    width:100%;
     width: 100vw;
     z-index: 0;
 
