--- a/css/base.css
+++ b/css/base.css
@@ -1035,10 +1035,16 @@ div#panel {
 body {
   overflow-y: scroll; }
 
+section, header {
+  position: relative;
+  width: 100%;
+  width: 100vw;
+  display: table; }
+
 button.hamburger {
   position: absolute;
-  top: 1em;
-  right: 1em;
+  top: 5px;
+  right: 5px;
   z-index: 999;
   display: block;
   -ms-touch-action: none;
@@ -1089,6 +1095,12 @@ button.hamburger {
     -webkit-transform: translateY(-15px);
     transform: translateY(-15px); } }
 
+.astudillo h1, .astudillo h2, .astudillo h3, .corregidora h1, .corregidora h2, .corregidora h3, .corregidora h4, .pri h5, .verde h5 {
+  position: absolute;
+  left: -300%;
+  font-size: .5em;
+  z-index: -1; }
+
 .astudillo {
   position: relative;
   background: no-repeat center center;
@@ -1137,10 +1149,7 @@ button.hamburger {
   100% {
     opacity: 1; } }
   .astudillo::after {
-    padding-bottom: 50%; }
-  .astudillo h1, .astudillo h2, .astudillo h3 {
-    position: absolute;
-    left: -300%; }
+    padding-bottom: 38%; }
 
 .corregidora {
   position: relative;
@@ -1159,23 +1168,73 @@ button.hamburger {
     position: relative; }
   .corregidora::after {
     padding-bottom: 50%; }
-  .corregidora h1, .corregidora h2, .corregidora h3, .corregidora h4 {
-    position: absolute;
-    left: -300%; }
+
+.pri {
+  position: relative;
+  background: no-repeat center center;
+  margin: 0;
+  padding: 0;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 500 500'%3E%3Cstyle type='text/css'%3E .st0%7Bfill:%23B9B9B9;%7D .st1%7Bfill:%23E20613;%7D .st2%7Bfill:%23009540;%7D .st3%7Bfill:%23FFFFFF;%7D .st4%7Bfill:%23090400;%7D%0A%3C/style%3E%3Cpath class='st0' d='M500 429V71c0-71-71-71-71-71H250 71C71 0 0 0 0 71v358c0 0 0 71 71 71h179 179C500 500 500 429 500 429'/%3E%3Cpath class='st1' d='M283.8 45.3C384.9 61 462.3 148.4 462.3 253.9c0 105.5-77.4 192.9-178.4 208.6V45.3z'/%3E%3Cpath class='st2' d='M39.9 253.9c0-102.1 72.5-187.3 168.8-206.9v413.9C112.4 441.2 39.9 356 39.9 253.9'/%3E%3Crect x='184.4' class='st3' width='140.7' height='498.3'/%3E%3Crect x='354.8' y='164.2' class='st3' width='43.6' height='171.8'/%3E%3Cpath class='st3' d='M113.1 194.8v45.1h8.9c0 0 8-0.3 8-9.8v-22.5c0 0 1-12.8-8.1-12.8H113.1zM69.6 167c0 0 63.4 0.1 66.2 0.4 5.8 0.5 33.3 5.3 33.3 30.8v41.7c0 0-4.7 30.6-33.3 30.6h-22.5v68.4H69.6V167z'/%3E%3Cpath class='st4' d='M248.5 135v39.3h8.2c0 0 7.3-0.3 7.3-9.5v-17.4c0 0 0.9-12.4-7.4-12.4H248.5zM205.1 106.9h70.6c0 0 27.6 3.8 27.6 31.4v29.3c0 0-0.2 11.7-11.6 21.3 -0.2 0.4 13.3 4.2 13.3 22.4v67.3h-40.8v-67.1c0 0-1.9-10.5-15.9-7.3 -0.2 0.4 0 74.6 0 74.6h-43.1V106.9z'/%3E%3C/svg%3E");
+  background-size: contain;
+  overflow: hidden;
+  width: 50%;
+  height: auto; }
+  .pri::after {
+    content: "";
+    padding-bottom: 25%;
+    display: block;
+    position: relative; }
+  .pri::after {
+    padding-bottom: 100%; }
+
+.verde {
+  position: relative;
+  background: no-repeat center center;
+  margin: 0;
+  padding: 0;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 499.2 500'%3E%3Cstyle type='text/css'%3E .st0%7Bfill-rule:evenodd;clip-rule:evenodd;fill:%2362B351;%7D .st1%7Bfill:%23FFFFFF;%7D .st2%7Bfill:%23B5D174;%7D .st3%7Bfill:%2319A862;%7D .st4%7Bfill:%232C292B;%7D .st5%7Bfill-rule:evenodd;clip-rule:evenodd;fill:%23FFFFFF;%7D .st6%7Bfill-rule:evenodd;clip-rule:evenodd;fill:%23E31D13;%7D .st7%7Bfill-rule:evenodd;clip-rule:evenodd;fill:%23FFEB0D;%7D .st8%7Bfill-rule:evenodd;clip-rule:evenodd;fill:%2319A862;%7D .st9%7Bfill-rule:evenodd;clip-rule:evenodd;fill:%232C292B;%7D%0A%3C/style%3E%3Cpath class='st0' d='M49.9 0h399.3c27.4 0 49.9 22.5 49.9 49.9v400.1c0 27.4-22.5 49.9-49.9 49.9H49.9C22.5 500 0 477.5 0 450.1V49.9C0 22.5 22.5 0 49.9 0'/%3E%3Cpath class='st1' d='M122 479.6h73.3v-33.4h-42.1V434h42.1v-31.6h-42.1v-13.2h42.1v-33.4H122V479.6zM68.5 435.2l-11.8-79 -34.3-0.4 27.2 123.6h36.7l28.7-123.2H80.9L68.5 435.2zM269.9 424.9c2.5-0.2 4.3-0.8 5.8-1.7 20.2-13.2 20-64.4-14.4-66.6 -2.3-0.2-6.4-0.8-12.4-0.8H208v123.8h31.6v-39.4h7.4c0.6 1 1.2 2.1 1.9 3.5 2.9 6.4 6 18.4 10.3 35.9h36.1C286.6 448.4 279.8 427 269.9 424.9zM252.2 410c-1.2 0-2.3 0.2-3.3 0.2h-8.5v-24.3l3.3 0.2c1.9 0 3.5-0.2 5.2-0.2 0.8 0.2 1.7 0.2 2.7 0.4C260.2 388.8 257.7 409.6 252.2 410zM475 389.2v-33.4h-73.3v123.8H475v-33.4h-41.9V434H475v-31.6h-41.9v-13.2H475zM347.3 356.2h-45.8v123.2h43.3c0.8 0 1.7 0 2.5 0.2 2.3 0 4.7 0.4 7.4-0.2 32.8-6 38.4-36.3 38.6-63.3C393.5 384.4 386.1 356.4 347.3 356.2zM347.3 443.5c-2.5 0.6-5.6 1-9.1 0.6h-4.3v-52.6h3.7c3.7-0.2 7 0 9.7 0.8 9.3 3.1 13.4 12.2 13.4 23.5C360.7 427.8 358.4 440.2 347.3 443.5z'/%3E%3Cpath class='st2' d='M57.6 240.2c37.4-3.7 74.6-8.6 111.9-14.1l-18.1-36.8C134.2 190.8 71.7 219.4 57.6 240.2'/%3E%3Cpath class='st3' d='M58.4 242.9c23.4 21.7 87.2 32.8 132.9 27.8l-21-42.7C133 232.9 95.6 238 58.4 242.9'/%3E%3Cpath class='st4' d='M275.8 177.5c5.8-16.4 11.2-33.7 9.1-55.5 -0.2-7.8-2.1-12-4.3-15.1 -2.1-2.5-3.5-5.2-4.3-7.8 -0.6-3.5-1.6-6.2-2.5-8.3 -1.4-3.5-1-6-0.8-7.8 1-5.4 2.7-10.3 4.9-14.9 3.7 1 9.6 0.5 12.2-1.7 24.6-2.9 54.5-0.6 79.5 8 1.6 0.8 3.1 1.7 4.3 3.1 1 2.1 4.1 1.7 3.7-1.7 0.2-22.9-16.1-40.6-36.3-49.5 -10.7-3.5-24.3-6-36.7-6.6 -11.6-0.6-27.9-0.6-32.2 3.1 -17.5-1.7-30.3 6-38.4 22.7 -9.9 22.7-13 37.3-12.6 48.3 -22.2 25.9-15.3 54.7-4.2 84.1C236.6 176.4 256.1 176.4 275.8 177.5'/%3E%3Cpath class='st2' d='M346.6 178.9c-19.8 0.6-39.2 0.2-58.5-0.6 -0.1 0-0.2 0-0.3 0 -4-0.3-8-0.6-11.9-0.8 -19.7-1.1-39.2-1-58.7 0.5 -4 0.3-8 0.7-12 1.2l17 39.4c44-6.6 85.6-14 123.4-22.8 36.3-7.2 68.7-16.9 96.4-28.5C409.2 174.8 377.5 178 346.6 178.9'/%3E%3Cpath class='st3' d='M300.2 206.6c-25.3 4.1-51.5 9.1-77.5 13.2 0 0-0.1 0-0.1 0 6.2 14.9 12.9 29.6 19.3 44.5 0.1 0 1.2-0.5 1.4-0.5 3.5-1.1 5.7-1.8 9.2-2.9 21.9-7.1 43.6-14.3 65.1-22.7 42.4-16.5 84-37.3 124.6-70.8C397.4 185.5 350 198.3 300.2 206.6'/%3E%3Cpath class='st1' d='M246.2 275l-4.1-10.9 -19.9-44.2c0 0 0.1 0 0.1 0l-0.5-1.2 -17.1-39.4L168.4 95l-57.2 13.6 39.7 80.7 18.1 36.8 0.9 1.9 21 42.7 29.3 59.5h51.4l30.6-61.7 15.1-30.3c-21.5 8.3-43.2 15.5-65.1 22.7L246.2 275zM324 94.9l-21.5 49.3 -14.8 34c0.1 0 0.2 0 0.3 0 19.3 0.8 38.7 1.2 58.5 0.6l34.2-70.5L324 94.9z'/%3E%3Cpath class='st5' d='M58.4 239.4c90-9.9 182-23.5 278.8-42.1 31.2-6.2 60.5-14.4 81.7-20.8 -42.1 16.3-99.1 29.3-169.8 40.2C194 225.3 130.8 234.8 59 243.3 57 243.5 56.7 239.8 58.4 239.4'/%3E%3Cpath class='st6' d='M342.1 47.5c2.5-1.9 7.6-10.1 9.5-13.6 17.1 12.6 24.4 25.8 23.1 39C367.3 61.3 357 52 342.1 47.5'/%3E%3Cpath class='st7' d='M274 23.7c7.4-3.3 16.7-2.9 27.4-2.7 18.2 0 40 4.5 48.1 11.8 -2.3 6.6-6 10.9-10.3 13.4 -21.7-6.8-42.5-6.6-62.7-4.8C276.5 35.7 275.9 29.3 274 23.7'/%3E%3Cpath class='st8' d='M276.3 43.5c0.2-0.8 0-1.4 19.2-1.2 16.3 0.2 31.6 0.2 46.9 7 15.9 6 25.6 14.2 31 24.4 -14.4-5.6-30.3-8.1-46.6-9.5 -12.4-0.8-24.8-0.8-37.4 0.2 -1.9 0-1.5 3.6-11.4 1.4 -3.7-2.5-5.2-7.4-3.7-14.4C274.7 48.1 275.5 46 276.3 43.5'/%3E%3Cpath class='st7' d='M264.5 26.4c2.7-1.7 4.9-2.9 6.4-2.7 1.5 0.2 1.7 1.9 2.1 3.5 1.2 5.6 1.4 12.8 0.6 18.4 -2.5 8.7-3.9 15.3 1 20.2 1.6 1.2 1.6 2.3 0.4 3.9 -1.1 3.7-6.8 13.2-3.1 20.4 3.5 10.1 3.1 15.7 1.7 19.6 -1 6-7 12.4-18.6 12 -7.8-0.2-18.8-3.3-22.3-17.1 -2.7-11.8 2.3-27.7 10.3-45.2C251.1 43.3 258.4 31.2 264.5 26.4'/%3E%3Cpath class='st9' d='M263.9 49.3c3.5 0 6.2-2.9 6.2-6.2 0-3.5-2.7-6.2-6.2-6.2 -3.3 0-6.2 2.7-6.2 6.2C257.7 46.4 260.6 49.3 263.9 49.3'/%3E%3C/svg%3E");
+  background-size: contain;
+  overflow: hidden;
+  width: 50%;
+  height: auto; }
+  .verde::after {
+    content: "";
+    padding-bottom: 25%;
+    display: block;
+    position: relative; }
+  .verde::after {
+    padding-bottom: 100%; }
 
 header#hero {
   height: 100%;
   height: 100vh;
   background-color: #babdb5;
-  background: url(../images/Ricardo_Astudillo_Suarez-002.jpg) no-repeat center center;
+  background: url(../images/Ricardo_Astudillo_Suarez-mv.jpg) no-repeat center center;
   background-size: cover; }
   header#hero .astudillo {
     width: 100%;
     right: auto;
-    left: auto; }
-  header#hero .corregidora {
+    left: auto;
+    position: absolute;
+    top: 30px; }
+  header#hero .logos {
     width: 50%;
-    left: 0; }
+    left: 0;
+    position: absolute;
+    top: 400px;
+    top: 60vh; }
+  header#hero .corregidora {
+    width: 100%;
+    display: block; }
+  header#hero div.coalicion {
+    width: 70%;
+    display: block;
+    margin: 0 auto; }
+    header#hero div.coalicion > figure {
+      width: 47.5%;
+      float: left; }
+      header#hero div.coalicion > figure:first-child {
+        margin-right: 5%; }
 
 section#intro {
   padding: 1em 0; }
