--- a/scss/content/_s_hero.scss
+++ b/scss/content/_s_hero.scss
@@ -2,17 +2,38 @@ header#hero{
     height: 100%;
     height: 100vh;
     background-color: $a_grey_shade ;
-    background: url(../images/Ricardo_Astudillo_Suarez-002.jpg) no-repeat center center;
+    background: url(../images/Ricardo_Astudillo_Suarez-mv.jpg) no-repeat center center;
     background-size: cover;
 
     .astudillo{
       width: 100%;
       right: auto;
       left: auto;
+      position: absolute;
+      top: 30px;
+    }
+
+    .logos{
+      width: 50%;
+      left: 0;
+      position: absolute;
+      top: 400px;
+      top: 60vh;
     }
 
     .corregidora{
-      width: 50%;
-      left: 0;
+      width: 100%;
+      display: block
+    }
+
+    div.coalicion{
+      width: 70%;
+      display: block;
+      margin: 0 auto;;
+      &>figure{
+        width: 47.5%;
+        float: left;
+        &:first-child{margin-right: 5%}
+      }
     }
   }
