custom svg color workaround
- urlfriendlycolor function implementation
- astudilloSVG mixin with custom color variable

--- a/scss/components/_main_menu.scss
+++ b/scss/components/_main_menu.scss
@@ -30,6 +30,9 @@ aside#slidding_menu{
     width: 100vw;
     z-index: 0;
 
+    .astudillo{
+      @include astudilloSVG($w);
+    }
     nav{
         position: absolute;
         width: 90%;
