mobile menu styling

--- a/scss/content/_globals.scss
+++ b/scss/content/_globals.scss
@@ -18,7 +18,7 @@ button.hamburger{
   z-index: 999;
   display: block;
   touch-action: none;
-  color: $dark;
+  color: $a_grey;
 
   &:hover{@include bounce();}
 }
