--- a/scss/components/_main_menu.scss
+++ b/scss/components/_main_menu.scss
@@ -23,6 +23,8 @@ aside#slidding_menu, div#panel{
 
 aside#slidding_menu{
     background-color: $a_green;
+    @include astudilloAbst($action-color);
+    background-size: 200%;
     position: fixed;
     height: 100%;
     height: 100vh;
@@ -30,8 +32,13 @@ aside#slidding_menu{
     width: 100vw;
     z-index: 0;
 
+    button.hamburger{color: $w;}
+
     .astudillo{
       @include astudilloSVG($w);
+      width: 100%;
+      margin: 0 auto 3em auto;
+
     }
     nav{
         position: absolute;
@@ -43,13 +50,16 @@ aside#slidding_menu{
         transform: translate(-50%,-50%);
         text-align: center;
 
-        ul.unidades li{
+        ul li{
             //@extend %serif;
-            font-size: 1.25em;
-            line-height: 1.75em;
-            padding-bottom: .5em;
+            font-size: 1.5em;
+            line-height: 1.25em;
+            padding-bottom: .25em;
             text-transform: uppercase;
             font-weight: 100;
+            text-transform: uppercase;
+            color: $w;
+            list-style: none;
 
             &:hover, &:active{color: $dark;}
         }
