--- a/scss/content/_s_intro.scss
+++ b/scss/content/_s_intro.scss
@@ -1,3 +1,13 @@
 section#intro{
   padding: 1em 0;
+  main p{text-align: justify;}
+
+  blockquote{
+    width: 100%;
+    background-color: $a_green;
+    font-size: 2em;
+    color: $w;
+    padding: .5em;
+    margin: 0;
+    }
 }
