--- a/scss/content/_s_comunidades.scss
+++ b/scss/content/_s_comunidades.scss
@@ -1,25 +1,80 @@
 section#comunidades{
   background-color: $a_grey_shade;
-  height: 50%;
-  height: 50vh;
   width: 100%;
-  
+
+  .wrapper{
+      position: relative;
+      width: 100%;
+      padding: 25px 0;
+      height: 500px;
+  }
 
   article.socialbox{
-    width: 80%;
-    height: 50vh;
+    width: 70%;
+    //height: 450px;
     background-color: $w;
     position: relative;
-    margin: -50 auto 0 auto;
-
+    margin: 25px auto;
+    padding: 1em;
+    @include box-shadow;
+    border-radius: 3px;
 
     figure{
+      width: 100%;
+      @include img_sprite(100%);
+      display: block;
+    }
+
+    figcaption{
+      line-height: 1.3em;
+      margin-bottom: 10px;
+      font-size: .9em;
+      font-weight: 300;
+    }
+
+    .profile{
+      $height:50px;
+      position: relative;
+      top: 0;
+      width: 80%;
+      height: $height;
+      margin-bottom: 10px;
+
+      &> span{display: inline-block;}
+
+      h1{
+        font-size: 1.25em;
+        line-height: 1em;
+        color:$action-color;
+        width: 100%;
+        margin: 0;
+      }
+
+      img{
+        width: $height;
+        height: $height;
+        @include circle($height);
+        background-color: $a_grey_shade;
+        left: 0;
+      }
+    }
+
+    .fa, .svg-inline--fa{
       position: absolute;
       top:0;
-      width: 50px;
-      margin: -50 auto 0 auto;
-
-
+      right: 5px;
+      height: 35px;
+      width: 35px;
+      background-color: $action-color;
+      color: $w;
     }
+  }
+  h3{
+text-align: center;
+    font-size: 1.15em;
+    text-transform: uppercase;
+    font-weight: 500;
+    letter-spacing: .025em;
+    margin: 25px auto;
   }
 }
