--- a/scss/core/_skeleton.scss
+++ b/scss/core/_skeleton.scss
@@ -172,9 +172,9 @@ input[type="reset"],
 input[type="button"] {
   display: inline-block;
   height: 38px;
-  padding: 0 30px;
-  color: #555;
-  text-align: center;
+  //padding: 0 30px;
+  //color: #555;
+  text-align: right;
   font-size: 11px;
   font-weight: 600;
   line-height: 38px;
@@ -183,8 +183,8 @@ input[type="button"] {
   text-decoration: none;
   white-space: nowrap;
   background-color: transparent;
-  border-radius: 4px;
-  border: 1px solid #bbb;
+  //border-radius: 4px;
+  //border: 1px solid #bbb;
   cursor: pointer;
   box-sizing: border-box; }
 .button:hover,
@@ -236,11 +236,12 @@ textarea,
 select {
   height: 38px;
   padding: 6px 10px; /* The 6px vertically centers text on FF, ignored by Webkit */
-  background-color: #fff;
-  border: 1px solid #D1D1D1;
-  border-radius: 4px;
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid #D1D1D1;
   box-shadow: none;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  width: 100%;}
 /* Removes awkward default styles on some inputs for iOS */
 input[type="email"],
 input[type="number"],
@@ -272,7 +273,7 @@ label,
 legend {
   display: block;
   margin-bottom: .5rem;
-  font-weight: 600; }
+  font-weight: 300; }
 fieldset {
   padding: 0;
   border-width: 0; }
