--- a/scss/content/_s_buzon.scss
+++ b/scss/content/_s_buzon.scss
@@ -25,4 +25,10 @@ section#buzon{
       font-weight: 300;
     }
   }
+
+  input::placeholder,textarea::placeholder{
+    color:$silver;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+  }
 }
