--- a/css/base.css
+++ b/css/base.css
@@ -693,6 +693,9 @@ select {
   box-sizing: border-box;
   width: 100%; }
 
+textarea {
+  border: 1px solid #D1D1D1; }
+
 /* Removes awkward default styles on some inputs for iOS */
 input[type="email"],
 input[type="number"],
@@ -1159,10 +1162,10 @@ input[type="button"] {
   text-align: right;
   float: right;
   font-size: 1.5em; }
-  button:after,
-  input[type="submit"]:after,
-  input[type="reset"]:after,
-  input[type="button"]:after {
+  button::after,
+  input[type="submit"]::after,
+  input[type="reset"]::after,
+  input[type="button"]::after {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 500 500'%3E%3Cstyle type='text/css'%3E .st0%7Bfill:%233e3e3e;%7D%0A%3C/style%3E%3Cpolygon class='st0' points='301.6 0.2 20.3 0.2 198.9 250.2 20.3 500.2 301.6 500.2 480.2 250.2 '/%3E%3C/svg%3E");
     content: "!";
     padding-bottom: 100%; }
@@ -1437,6 +1440,22 @@ section#buzon {
       margin: 0; }
     section#buzon legend p {
       font-weight: 300; }
+  section#buzon input::-webkit-input-placeholder, section#buzon textarea::-webkit-input-placeholder {
+    color: #D1D1D1;
+    font-size: 1.5rem;
+    text-transform: uppercase; }
+  section#buzon input:-ms-input-placeholder, section#buzon textarea:-ms-input-placeholder {
+    color: #D1D1D1;
+    font-size: 1.5rem;
+    text-transform: uppercase; }
+  section#buzon input::-ms-input-placeholder, section#buzon textarea::-ms-input-placeholder {
+    color: #D1D1D1;
+    font-size: 1.5rem;
+    text-transform: uppercase; }
+  section#buzon input::placeholder, section#buzon textarea::placeholder {
+    color: #D1D1D1;
+    font-size: 1.5rem;
+    text-transform: uppercase; }
 
 section#reclutamiento input {
   color: #b1ca07; }
