--- a/css/base.css
+++ b/css/base.css
@@ -1323,10 +1323,13 @@ section#intro {
   section#intro blockquote {
     width: 100%;
     background-color: #b1ca07;
-    font-size: 2em;
+    font-size: 1.125em;
     color: #f3f3f2;
     padding: .5em;
-    margin: 0; }
+    margin: 0;
+    text-transform: uppercase; }
+    section#intro blockquote p {
+      padding: 1em 0 3em 0; }
 
 section#comunidades {
   background-color: #babdb5;
