--- a/scss/content/_s_intro.scss
+++ b/scss/content/_s_intro.scss
@@ -5,9 +5,12 @@ section#intro{
   blockquote{
     width: 100%;
     background-color: $a_green;
-    font-size: 2em;
+    font-size: 1.125em;
     color: $w;
     padding: .5em;
     margin: 0;
+    text-transform: uppercase;
+
+    p{padding: 1em 0 3em 0;}
     }
 }
