--- a/css/base.css
+++ b/css/base.css
@@ -692,6 +692,46 @@ select {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   width: 100%; }
+  input[type="email"]::-webkit-input-placeholder,
+  input[type="number"]::-webkit-input-placeholder,
+  input[type="search"]::-webkit-input-placeholder,
+  input[type="text"]::-webkit-input-placeholder,
+  input[type="tel"]::-webkit-input-placeholder,
+  input[type="url"]::-webkit-input-placeholder,
+  input[type="password"]::-webkit-input-placeholder,
+  textarea::-webkit-input-placeholder,
+  select::-webkit-input-placeholder {
+    text-transform: uppercase; }
+  input[type="email"]:-ms-input-placeholder,
+  input[type="number"]:-ms-input-placeholder,
+  input[type="search"]:-ms-input-placeholder,
+  input[type="text"]:-ms-input-placeholder,
+  input[type="tel"]:-ms-input-placeholder,
+  input[type="url"]:-ms-input-placeholder,
+  input[type="password"]:-ms-input-placeholder,
+  textarea:-ms-input-placeholder,
+  select:-ms-input-placeholder {
+    text-transform: uppercase; }
+  input[type="email"]::-ms-input-placeholder,
+  input[type="number"]::-ms-input-placeholder,
+  input[type="search"]::-ms-input-placeholder,
+  input[type="text"]::-ms-input-placeholder,
+  input[type="tel"]::-ms-input-placeholder,
+  input[type="url"]::-ms-input-placeholder,
+  input[type="password"]::-ms-input-placeholder,
+  textarea::-ms-input-placeholder,
+  select::-ms-input-placeholder {
+    text-transform: uppercase; }
+  input[type="email"]::placeholder,
+  input[type="number"]::placeholder,
+  input[type="search"]::placeholder,
+  input[type="text"]::placeholder,
+  input[type="tel"]::placeholder,
+  input[type="url"]::placeholder,
+  input[type="password"]::placeholder,
+  textarea::placeholder,
+  select::placeholder {
+    text-transform: uppercase; }
 
 textarea {
   border: 1px solid #D1D1D1; }
@@ -1161,7 +1201,7 @@ input[type="button"] {
   border: none;
   text-align: right;
   float: right;
-  font-size: 1.5em; }
+  font-size: 1em; }
   button::after,
   input[type="submit"]::after,
   input[type="reset"]::after,
@@ -1445,23 +1485,47 @@ section#buzon {
       font-weight: 300; }
   section#buzon input::-webkit-input-placeholder, section#buzon textarea::-webkit-input-placeholder {
     color: #D1D1D1;
-    font-size: 1.5rem;
-    text-transform: uppercase; }
+    font-size: 1.5rem; }
   section#buzon input:-ms-input-placeholder, section#buzon textarea:-ms-input-placeholder {
     color: #D1D1D1;
-    font-size: 1.5rem;
-    text-transform: uppercase; }
+    font-size: 1.5rem; }
   section#buzon input::-ms-input-placeholder, section#buzon textarea::-ms-input-placeholder {
     color: #D1D1D1;
-    font-size: 1.5rem;
-    text-transform: uppercase; }
+    font-size: 1.5rem; }
   section#buzon input::placeholder, section#buzon textarea::placeholder {
     color: #D1D1D1;
-    font-size: 1.5rem;
-    text-transform: uppercase; }
+    font-size: 1.5rem; }
 
 section#reclutamiento input {
   color: #b1ca07; }
+
+section#reclutamiento form {
+  margin: 25px 0; }
+
+section#reclutamiento legend .fa, section#reclutamiento legend .svg-inline--fa {
+  font-size: 3em;
+  color: #8c9086; }
+
+section#reclutamiento legend h3 {
+  font-size: 3em;
+  color: #b1ca07;
+  margin: 0;
+  text-transform: uppercase;
+  font-weight: 500; }
+
+section#reclutamiento legend p {
+  font-size: .95em; }
+
+section#reclutamiento input[type] {
+  border-bottom-color: #b1ca07; }
+  section#reclutamiento input[type]::-webkit-input-placeholder {
+    color: #b1ca07; }
+  section#reclutamiento input[type]:-ms-input-placeholder {
+    color: #b1ca07; }
+  section#reclutamiento input[type]::-ms-input-placeholder {
+    color: #b1ca07; }
+  section#reclutamiento input[type]::placeholder {
+    color: #b1ca07; }
 
 footer {
   background-color: #3e3e3e; }
