--- a/scss/core/_skeleton.scss
+++ b/scss/core/_skeleton.scss
@@ -241,7 +241,12 @@ select {
   border-bottom: 1px solid #D1D1D1;
   box-shadow: none;
   box-sizing: border-box;
-  width: 100%;}
+  width: 100%;
+
+  &::placeholder{
+    text-transform: uppercase;
+  }
+}
 
 textarea{  border: 1px solid #D1D1D1;
 ;}
