ribbon implementation (intro/reclutamiento)

--- a/css/base.css
+++ b/css/base.css
@@ -1361,18 +1361,21 @@ section#intro {
   section#intro figure.ribbon {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 417.5 1279.6'%3E%3Cstyle type='text/css'%3E .st0%7Bfill:%2300A49A;%7D .st1%7Bfill:%23B1CA07;%7D .st2%7Bfill:%238C9086;%7D .st3%7Bfill:%23B90066;%7D%0A%3C/style%3E%3Cpolygon class='st0' points='417.5 959.7 228.5 959.7 0 1279.6 189 1279.6 '/%3E%3Cpolygon class='st1' points='417.5 319.9 228.5 319.9 0 0 189 0 '/%3E%3Cpolygon class='st2' points='417.5 319.9 228.5 319.9 0 639.8 189 639.8 '/%3E%3Cpolygon class='st3' points='417.5 959.7 228.5 959.7 0 639.8 189 639.8 '/%3E%3C/svg%3E");
     background-position: left bottom;
-    background-size: 135px;
+    background-size: 140px;
     background-repeat: repeat-y;
     z-index: 10;
     position: absolute;
-    width: 30%;
+    width: 25%;
     height: 100%;
     right: 0;
     margin: 0;
     padding: 0;
     bottom: 0; }
   section#intro main p {
-    text-align: justify; }
+    width: 80%;
+    font-size: .95em;
+    font-weight: 300;
+    line-height: 2em; }
   section#intro blockquote {
     width: 100%;
     background-color: #b1ca07;
@@ -1382,7 +1385,7 @@ section#intro {
     margin: 0;
     text-transform: uppercase; }
     section#intro blockquote p {
-      padding: 1em 0 3em 0; }
+      margin: 25px 0; }
 
 section#comunidades {
   background-color: #babdb5;
@@ -1509,25 +1512,37 @@ section#buzon {
     color: #D1D1D1;
     font-size: 1.5rem; }
 
-section#reclutamiento input {
-  color: #b1ca07; }
+section#reclutamiento figure.ribbon {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 417.5 1279.6'%3E%3Cstyle type='text/css'%3E .st0%7Bfill:%2300A49A;%7D .st1%7Bfill:%23B1CA07;%7D .st2%7Bfill:%238C9086;%7D .st3%7Bfill:%23B90066;%7D%0A%3C/style%3E%3Cpolygon class='st0' points='417.5 959.7 228.5 959.7 0 1279.6 189 1279.6 '/%3E%3Cpolygon class='st1' points='417.5 319.9 228.5 319.9 0 0 189 0 '/%3E%3Cpolygon class='st2' points='417.5 319.9 228.5 319.9 0 639.8 189 639.8 '/%3E%3Cpolygon class='st3' points='417.5 959.7 228.5 959.7 0 639.8 189 639.8 '/%3E%3C/svg%3E");
+  background-position: left top;
+  background-size: 140px;
+  background-repeat: repeat-y;
+  z-index: 10;
+  position: absolute;
+  width: 25%;
+  height: 100%;
+  right: 0;
+  margin: 0;
+  padding: 0;
+  bottom: 0; }
 
 section#reclutamiento form {
-  margin: 25px 0; }
+  margin: 25px 0;
+  width: 78%; }
 
-section#reclutamiento legend .fa, section#reclutamiento legend .svg-inline--fa {
-  font-size: 3em;
-  color: #8c9086; }
-
-section#reclutamiento legend h3 {
-  font-size: 3em;
-  color: #b1ca07;
-  margin: 0;
-  text-transform: uppercase;
-  font-weight: 500; }
-
-section#reclutamiento legend p {
-  font-size: .95em; }
+section#reclutamiento legend {
+  overflow: hidden; }
+  section#reclutamiento legend .fa, section#reclutamiento legend .svg-inline--fa {
+    font-size: 3em;
+    color: #8c9086; }
+  section#reclutamiento legend h3 {
+    font-size: 2.5em;
+    color: #b1ca07;
+    margin: 0;
+    text-transform: uppercase;
+    font-weight: 500; }
+  section#reclutamiento legend p {
+    font-size: .95em; }
 
 section#reclutamiento input[type] {
   border-bottom-color: #b1ca07; }
