--- a/scss/content/_s_intro.scss
+++ b/scss/content/_s_intro.scss
@@ -2,11 +2,16 @@ section#intro{
   padding-top: 1em;
 
   figure.ribbon{
-    @include a_ribbon(bottom);
+    @include a_ribbon(bottom, 25%);
     bottom:0;
   }
 
-  main p{text-align: justify;}
+  main p{
+    width: 80%;
+    font-size: .95em;
+    font-weight: 300;
+    line-height: 2em;
+  }
 
   blockquote{
     width: 100%;
@@ -17,6 +22,6 @@ section#intro{
     margin: 0;
     text-transform: uppercase;
 
-    p{padding: 1em 0 3em 0;}
+    p{margin: 25px 0;}
     }
 }
