--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -46,31 +46,6 @@ $gotham:"Gotham","Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial,
 ::-moz-selection { background:$action-color; color:$w; text-shadow:none }
 ::-webkit-selection { background:$action-color; color:$w; text-shadow:none }
 
-@mixin placeholder($color:#1e1e1e,$f-size:1em,$transform:""){
-  color:$color;
-  font-size: $f-size;
-  text-transform: $transform;
-  ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-    color:$color;
-    font-size: $f-size;
-    text-transform: $transform;
-  }
-  ::-moz-placeholder { /* Firefox 19+ */
-    color:$color;
-    font-size: $f-size;
-    text-transform: $transform;
-  }
-  :-ms-input-placeholder { /* IE 10+ */
-    color:$color;
-    font-size: $f-size;
-    text-transform: $transform;
-  }
-  :-moz-placeholder { /* Firefox 18- */
-    color:$color;
-    font-size: $f-size;
-    text-transform: $transform;
-  }
-}
 @mixin img_sprite($padding-bottom:25%){
   position: relative;
   background: no-repeat center center;
@@ -97,10 +72,10 @@ $gotham:"Gotham","Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial,
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 500 500'%3E%3Cstyle type='text/css'%3E .st0%7Bfill:#{url-friendly-colour($color)};%7D%0A%3C/style%3E%3Cpolygon class='st0' points='301.6 0.2 20.3 0.2 198.9 250.2 20.3 500.2 301.6 500.2 480.2 250.2 '/%3E%3C/svg%3E");
 }
 
-@mixin a_ribbon($position:center,$width:30%){
+@mixin a_ribbon($position:center,$width:30%,$size:140px){
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 417.5 1279.6'%3E%3Cstyle type='text/css'%3E .st0%7Bfill:%2300A49A;%7D .st1%7Bfill:%23B1CA07;%7D .st2%7Bfill:%238C9086;%7D .st3%7Bfill:%23B90066;%7D%0A%3C/style%3E%3Cpolygon class='st0' points='417.5 959.7 228.5 959.7 0 1279.6 189 1279.6 '/%3E%3Cpolygon class='st1' points='417.5 319.9 228.5 319.9 0 0 189 0 '/%3E%3Cpolygon class='st2' points='417.5 319.9 228.5 319.9 0 639.8 189 639.8 '/%3E%3Cpolygon class='st3' points='417.5 959.7 228.5 959.7 0 639.8 189 639.8 '/%3E%3C/svg%3E");
   background-position: left $position;
-  background-size: 135px;
+  background-size: 140px;
   background-repeat: repeat-y;
   z-index: 10;
   position: absolute;
